# astroapp

./: .gitignore  LICENSE  README.md  plan.txt  prompty.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  windows-release.yml
app/: __init__.py  main.py
app/config/: __init__.py  runtime_paths.py  settings.py
app/engine/: __init__.py
app/engine/ephemeris/: __init__.py  backend.py  swiss_ephemeris_backend.py
app/engine/natal/: __init__.py  aspect_calculator.py  chart_calculator.py  house_calculator.py
app/engine/transit/: __init__.py  aspect_scanner.py  event_refiner.py  transit_position_sampler.py
app/models/: __init__.py  aspect.py  aspect_event.py  birth_data.py  chart.py  chart_settings.py  house_cusp.py  location_match.py  person.py  person_profile.py  planet_position.py  transit_aspect_hit.py  transit_query.py
app/resources/astrology/: NOTICE.txt
app/services/: __init__.py  location_lookup_service.py  natal_service.py  person_service.py  transit_service.py
app/storage/: __init__.py  db.py  migrations.py  repositories.py
app/ui/: __init__.py  clients_view.py  main_window.py  natal_view.py  transit_search_view.py
app/ui/widgets/: __init__.py  astrology_svg_assets.py  astrology_symbol_loader.py  chart_geometry.py  natal_chart_widget.py
app/utils/: __init__.py  angle_utils.py  time_utils.py
docs/: architecture.md  chart_renderer_v2_plan.md  index.html  release-template-pl.md
scripts/: build_windows_exe.ps1  build_windows_installer.ps1
scripts/installer/: install.cmd  install.ps1  uninstall.cmd
tests/: conftest.py  test_angle_utils.py  test_chart_geometry.py  test_chart_repository.py  test_db.py  test_ephemeris_backend.py  test_ephemeris_integration.py  test_location_lookup.py  test_natal.py  test_natal_reference_integration.py  test_person_service.py  test_repositories.py  test_settings.py  test_smoke.py  test_transit.py  test_transit_query_repository.py  test_ui_workflow.py
