[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astroapp"
version = "0.1.5"
description = "Desktop astrology application built with Python and PySide6."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "astroapp contributors" }]
dependencies = [
  "PySide6>=6.8,<7.0",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
astro = [
  "pysweph>=2.10.3.6,<3.0",
]
geo = [
  "geopy>=2.4,<3.0",
  "tzfpy>=0.15,<1.0",
]
dev = [
  "pyinstaller>=6.10,<7.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.8,<1.0",
]

[project.scripts]
astroapp = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = [
  "resources/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: tests that exercise optional real integrations",
  "ui: tests that require Qt and desktop libraries",
]
